# pyqir

./: .buildinfo  .dockerignore  .gitignore  .markdownlint.yaml  CONTRIBUTING.md  Cargo.toml  Changelog.md  NOTICE.txt  README.md  api.html  build.cmd  build.ps1  build.sh  building.html  cgmanifest.json  cspell.json  deny.toml  genindex.html  index.html  install.cmd  install.ps1  install.sh  mypy.ini  notice.hbs  notice.toml  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  upgrade.html
pyqir/: Cargo.toml  NOTICE-WHEEL.txt  README.md  pyproject.toml  setup.cfg
pyqir-evaluator/: Cargo.toml  NOTICE-WHEEL.txt  README.md  pyproject.toml  requirements-dev.txt  tox.ini
pyqir-evaluator/pyqir/: __init__.py
pyqir-evaluator/pyqir/evaluator/: __init__.py  _gatelogger.py  _gateset.py  _native.pyi  _nonadaptiveevaluator.py  _nonadaptivejit.py
pyqir-evaluator/src/: lib.rs  python.rs
pyqir-evaluator/tests/: test_api.py  test_unknown_external_func.py
pyqir-generator/: Cargo.toml  NOTICE-WHEEL.txt  README.md  pyproject.toml  requirements-dev.txt  tox.ini
pyqir-generator/pyqir/generator/: __init__.py  _builder.py  _native.pyi  _values.py  builder.py  builder.pyi  module.py  module.pyi  qis.py  qis.pyi  types.py  value.py  value.pyi
pyqir-generator/pyqir_generator/: __init__.py  builder.py  builder.pyi  instruction.py  module.py  module.pyi  qis.py  qis.pyi  value.py  value.pyi
pyqir-generator/resources/tests/: test_if_else.ll  test_if_else_continue.ll  test_if_else_else.ll  test_if_else_then.ll  test_if_then.ll  test_if_then_continue.ll  test_if_then_else.ll  test_if_then_else_continue.ll  test_if_then_then.ll  test_results_default_to_zero_if_not_measured.ll
pyqir-generator/src/: emit.rs  interop.rs  lib.rs  python.rs  python_llvm.rs  types.rs  utils.rs
pyqir-generator/src/qir/: array1d.rs  basic_values.rs  calls.rs  instructions.rs  mod.rs  qubits.rs  result.rs
pyqir-generator/tests/: test_api.py  test_call_parameters.py  test_conversions.py  test_eval.py  test_external_functions.py  test_gates.py  test_generator_api.py  test_if.py  test_int_intrinsics.py  test_int_operators.py  test_qis.py
pyqir-jit/: Cargo.toml  README.md  pyproject.toml
pyqir-jit/pyqir/jit/: __init__.py  _gatelogger.py  _gateset.py  _nonadaptivejit.py  gatelogger.py  gateset.py  nonadaptivejit.py
pyqir-jit/pyqir_jit/: __init__.py  gatelogger.py  gateset.py  jit.py
pyqir-jit/src/: gates.rs  interop.rs  intrinsics.rs  jit.rs  lib.rs  python.rs  runtime.rs
pyqir-jit/tests/: bell_qir_measure.bc  bell_qir_measure.ll  custom_entry_point_name.bc  custom_entry_point_name.ll  entry_point_types.bc  multiple_entry_points.bc  multiple_entry_points.ll  test_api.py
pyqir-parser/: Cargo.toml  NOTICE-WHEEL.txt  README.md  pyproject.toml  requirements-dev.txt  tox.ini
pyqir-parser/pyqir/: __init__.py
pyqir-parser/pyqir/parser/: __init__.py  _native.pyi  _parser.py  parser.py
pyqir-parser/pyqir_parser/: __init__.py  _parser.py  parser.py
pyqir-parser/src/: lib.rs  parse.rs  python.rs
pyqir-parser/tests/: hello.bc  select.bc  test_api.py  test_parser_api.py
pyqir/pyqir/: __init__.py  _basicqis.py  _constants.py  _entry_point.py  _entrypoint.py  _native.pyi  _passes.py  _simple.py  evaluator.py  qis.py  rt.py
pyqir/pyqir/evaluator/: __init__.py  _gates.py
pyqir/pyqir/generator/: __init__.py
pyqir/pyqir/qis/: __init__.py  _native.py
pyqir/pyqir/rt/: __init__.py  _native.py  _native.pyi
pyqir/src/: README.md  builder.rs  context.rs  core.rs  evaluator.rs  generator.rs  instructions.rs  lib.rs  metadata.rs  module.rs  python.rs  qis.rs  rt.rs  simple.rs  types.rs  utils.rs  values.rs
pyqir/tests/: 5_bit_random_number.ll  attributes.ll  bv.ll  combined_module.ll  gate_calls_10000.ll  profile_v1.0_compat.ll  profile_v1.1_compat.ll  profile_v2.0_compat.ll  random_bit.ll  switch_instr.ll  teleportchain.baseprofile.ll.reference  teleportchain.ll.reference  test_array_constant.py  test_conversions.py  test_entry_points.py  test_evaluator.py  test_external_functions.py  test_generator.py  test_generator_api.py  test_global_variables.py  test_if.py  test_int_operators.py  test_linking.py  test_module_attributes.py  test_module_composition.py  test_module_linking.py  test_parser.py  test_parser_api.py  test_parsing.py  test_passes.py  test_phi.py  test_qis.py  test_rt.py  test_simple_module.py  test_simplemodule.py  test_string_attributes.py  test_teleport.py  test_transform.py  test_trunc.py  test_types.py  (+4 more)
pyqir/tests/resources/: test_delete_func_after.ll  test_delete_func_before.ll  test_empty_false_block.ll  test_empty_true_block.ll  test_ghz_loop.ll  test_if_empty_blocks.ll  test_nested_blocks.ll  test_passes_before.ll  test_passes_distinguish_m.ll  test_passes_duplicate_after.ll  test_passes_remove_after.ll  test_passes_reverse_after.ll  test_phi_add.ll  test_phi_constants.ll  test_reordering_after.ll  test_reordering_before.ll  test_trunc.ll  test_zext.ll
qirlib/: CMakeLists.txt  Cargo.toml  NOTICE.txt  README.md  build.rs  config.cmake  extensions.cpp  external.rs  target.c
qirlib/llvm-wrapper/: ContextWrapper.cpp  LLVMWrapper.h  LldWrapper.cpp  MetadataWrapper.cpp  ModuleWrapper.cpp
qirlib/resources/tests/: custom_entry_point_name.bc  multiple_entry_points.bc  test_allows_qubit_out_of_range.ll  test_allows_result_out_of_range.ll  test_allows_unmeasured_result_condition.ll  test_call_variable.ll  test_empty_if.ll  test_if_else.ll  test_if_else_continue.ll  test_if_else_else.ll  test_if_else_then.ll  test_if_then.ll  test_if_then_continue.ll  test_if_then_else.ll  test_if_then_else_continue.ll  test_if_then_then.ll  test_int_binary_operators.ll  test_int_binop_intrinsics.ll  test_many_required_qubits_results.ll  test_one_required_qubit.ll  test_one_required_result.ll  (+3 more)
qirlib/src/: build.rs  builder.rs  codegen.rs  constants.rs  context.rs  extensions.rs  intrinsics.rs  lib.rs  link.rs  llvm_utils.rs  llvm_wrapper.rs  metadata.rs  module.bc  module.ll  module.rs  passes.rs  qis.rs  rt.rs  runtime_library.rs  tests.rs  types.rs  utils.rs  values.rs  wrappers.rs
(+266 files in other folders)
