[workspace]
members = ["pyqir", "qirlib"]
resolver = "2"

[workspace.package]
authors = ["Microsoft"]
version = "0.11.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/qir-alliance/pyqir"
repository = "https://github.com/qir-alliance/pyqir"

[workspace.dependencies]
const-str = "0.6"
pyo3 = { version = "0.24", features = ["abi3-py39", "extension-module"] }