[package]
authors = ["Microsoft"]
name = "pyqir-evaluator"
version = "0.4.1-alpha"
edition = "2018"
license = "MIT"
description = "Python based QIR Evaluation (JIT) library."
readme = "README.md"
homepage = "https://github.com/qir-alliance/pyqir"
repository = "https://github.com/qir-alliance/pyqir"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qirlib = { path = "../qirlib" }
pyo3 = { version="0.15.2", optional = true }

[features]
extension-module = ["pyo3/abi3-py36", "pyo3/extension-module"]
python-bindings = []
default = ["extension-module", "python-bindings"]
llvm11-0 = ["qirlib/llvm11-0"]
llvm12-0 = ["qirlib/llvm12-0"]
llvm13-0 = ["qirlib/llvm13-0"]
llvm14-0 = ["qirlib/llvm14-0"]

[dev-dependencies]
serial_test = "0.6.0"

[lib]
name = "pyqir_evaluator"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "pyqir.evaluator._native"
classifier=[
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
