[package]
authors = ["Microsoft"]
name = "pyqir-generator"
version = "0.4.1-alpha"
edition = "2018"
license = "MIT"
description = "Python based QIR generator library."
readme = "README.md"
homepage = "https://github.com/qir-alliance/pyqir"
repository = "https://github.com/qir-alliance/pyqir"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
pyo3 = "0.15.1"
qirlib = { path = "../qirlib" }

[features]
extension-module = ["pyo3/abi3-py36", "pyo3/extension-module"]
default = ["extension-module"]

[lib]
name = "pyqir_generator"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "pyqir.generator._native"
classifier = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
