[package]
authors = ["Microsoft"]
name = "pyqir-parser"
version = "0.4.1-alpha"
edition = "2018"
license = "MIT"
description = "Python based QIR parser library."
readme = "README.md"
homepage = "https://github.com/qir-alliance/pyqir"
repository = "https://github.com/qir-alliance/pyqir"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-ir = { version = "0.8.1" }
pyo3 = { version="0.15.2", optional = true }

[features]
extension-module = ["pyo3/abi3-py36", "pyo3/extension-module"]
python-bindings = []
llvm11-0 = ["llvm-ir/llvm-11"]
llvm12-0 = ["llvm-ir/llvm-12"]
llvm13-0 = ["llvm-ir/llvm-13"]
#llvm14-0 = ["llvm-ir/llvm-14"]
default = ["extension-module", "python-bindings"]

[lib]
name = "pyqir_parser"
crate-type = ["cdylib", "lib"]

[package.metadata.maturin]
name = "pyqir.parser._native"
classifier=[
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
