[package]
authors = ["Microsoft"]
name = "pyqir-parser"
version = "0.7.0-alpha.1"
edition = "2018"
license = "MIT"
description = "A parser for the Quantum Intermediate Representation (QIR)."
readme = "README.md"
homepage = "https://github.com/qir-alliance/pyqir"
repository = "https://github.com/qir-alliance/pyqir"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["target-x86"] }
llvm-ir = { version = "0.8" }
pyo3 = { version = "0.17", features = ["abi3-py37", "extension-module"], optional = true }

[features]
default = ["python-bindings"]
llvm11-0 = ["llvm-ir/llvm-11", "inkwell/llvm11-0"]
llvm12-0 = ["llvm-ir/llvm-12", "inkwell/llvm12-0"]
llvm13-0 = ["llvm-ir/llvm-13", "inkwell/llvm13-0"]
# llvm14-0 = ["llvm-ir/llvm-14", "inkwell/llvm14-0"]
python-bindings = ["pyo3"]

[lib]
name = "pyqir_parser"
crate-type = ["cdylib", "lib"]

[package.metadata.maturin]
name = "pyqir_parser._native"
