[package]
name = "pyqir"
description = "PyQIR parses, generates and evaluates the Quantum Intermediate Representation."
readme = "README.md"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
const-str = "0.5"
llvm-sys-181 = { package = "llvm-sys", version = "181.2", optional = true }
llvm-sys-191 = { package = "llvm-sys", version = "191.0", optional = true }
pyo3 = { version = "0.19", features = ["abi3-py38", "extension-module"] }
qirlib = { path = "../qirlib" }

[features]
llvm18-1 = ["llvm-sys-181", "qirlib/llvm18-1"]
llvm19-1 = ["llvm-sys-191", "qirlib/llvm19-1"]

[lib]
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "pyqir._native"
