[package]
name = "pyqir"
description = "PyQIR parses, generates and evaluates the Quantum Intermediate Representation."
readme = "README.md"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true


[dependencies]
const-str = { workspace = true }
pyo3 = { workspace = true }
llvm-sys-181 = { package = "llvm-sys", version = "181.2", optional = true }
llvm-sys-191 = { package = "llvm-sys", version = "191.0", optional = true }
llvm-sys-201 = { package = "llvm-sys", version = "201.0", optional = true }
qirlib = { path = "../qirlib" }

[features]
llvm18-1 = ["llvm-sys-181", "qirlib/llvm18-1"]
llvm19-1 = ["llvm-sys-191", "qirlib/llvm19-1"]
llvm20-1 = ["llvm-sys-201", "qirlib/llvm20-1"]

[lib]
crate-type = ["cdylib"]

