[metadata]
name = pyqir
version = 0.3.0b1
author = Microsoft
description = PyQIR - set of APIs for generating, parsing, and evaluating Quantum Intermediate Representation (QIR)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qir-alliance/pyqir
project_urls =
	Bug Tracker = https://github.com/qir-alliance/pyqir
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: Microsoft
	Operating System :: MacOS
	Operating System :: Unix

[options]
package_dir =
	= .
packages = find:
python_requires = >=3.6

[options.extras_require]
generator = pyqir-generator
evaluator = pyqir-evaluator
parser = pyqir-parser

[options.packages.find]
where = .

[bdist_wheel]
universal = 1