[package]
name = "qirlib"
version = "0.8.0-alpha.1"
edition = "2021"
license = "MIT"
description = "Base Profile QIR library"
build = "build.rs"
readme = "README.md"
homepage = "https://github.com/qir-alliance/pyqir"
repository = "https://github.com/qir-alliance/pyqir"
rust-version = "1.64"

[dependencies]
bitvec = "1.0"
const-str = "0.5"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["internal-getters"] }
lazy_static = "1.4"
llvm-sys-110 = { package = "llvm-sys", version = "110.0", optional = true }
llvm-sys-120 = { package = "llvm-sys", version = "120.2", optional = true }
llvm-sys-130 = { package = "llvm-sys", version = "130.0", optional = true }
llvm-sys-140 = { package = "llvm-sys", version = "140.0", optional = true }
log = "0.4"
mut_static = "5.0"

[dev-dependencies]
serial_test = "0.9"
normalize-line-endings = "0.3"

[build-dependencies]
cmake = "0.1"
cc = "1.0"
lazy_static = "1.4"

[lib]
name = "qirlib"

[features]
llvm11-0 = ["inkwell/llvm11-0", "llvm-sys-110"]
llvm12-0 = ["inkwell/llvm12-0", "llvm-sys-120"]
llvm13-0 = ["inkwell/llvm13-0", "llvm-sys-130"]
llvm14-0 = ["inkwell/llvm14-0", "llvm-sys-140"]

# default to use llvm-sys/inkwell for llvm linking
default = ["external-llvm-linking"]
external-llvm-linking = []

# disable linking for local installation or packaging
# no-llvm-linking is marker used in the cfg checks
llvm11-0-no-llvm-linking = ["llvm11-0", "no-llvm-linking", "llvm-sys-110/disable-alltargets-init", "inkwell/llvm11-0-no-llvm-linking"]
llvm12-0-no-llvm-linking = ["llvm12-0", "no-llvm-linking", "llvm-sys-120/disable-alltargets-init", "inkwell/llvm12-0-no-llvm-linking"]
llvm13-0-no-llvm-linking = ["llvm13-0", "no-llvm-linking", "llvm-sys-130/disable-alltargets-init", "inkwell/llvm13-0-no-llvm-linking"]
llvm14-0-no-llvm-linking = ["llvm14-0", "no-llvm-linking", "llvm-sys-140/disable-alltargets-init", "inkwell/llvm14-0-no-llvm-linking"]

no-llvm-linking = []

# let qirlib do the llvm linking
# qirlib-llvm-linking is marker used in the cfg checks
llvm11-0-qirlib-llvm-linking = ["llvm11-0", "qirlib-llvm-linking", "llvm-sys-110/disable-alltargets-init", "inkwell/llvm11-0-no-llvm-linking"]
llvm12-0-qirlib-llvm-linking = ["llvm12-0", "qirlib-llvm-linking", "llvm-sys-120/disable-alltargets-init", "inkwell/llvm12-0-no-llvm-linking"]
llvm13-0-qirlib-llvm-linking = ["llvm13-0", "qirlib-llvm-linking", "llvm-sys-130/disable-alltargets-init", "inkwell/llvm13-0-no-llvm-linking"]
llvm14-0-qirlib-llvm-linking = ["llvm14-0", "qirlib-llvm-linking", "llvm-sys-140/disable-alltargets-init", "inkwell/llvm14-0-no-llvm-linking"]

qirlib-llvm-linking = []

download-llvm = []
build-llvm = []

# Dev use only for packaging LLVM builds
package-llvm = ["build-llvm", "no-llvm-linking"]
