[package]
name = "qirlib"
description = "Base Profile QIR library"
readme = "README.md"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
const-str = { workspace = true }
llvm-sys-181 = { package = "llvm-sys", version = "181", optional = true }
llvm-sys-191 = { package = "llvm-sys", version = "191", optional = true }
llvm-sys-201 = { package = "llvm-sys", version = "201", optional = true }

[dev-dependencies]
normalize-line-endings = "0.3"

[build-dependencies]
cmake = "0.1"
cc = "1.0"

[lib]
name = "qirlib"

[features]
llvm18-1 = ["llvm-sys-181"]
llvm19-1 = ["llvm-sys-191"]
llvm20-1 = ["llvm-sys-201"]

# default to use llvm-sys for llvm linking
default = ["external-llvm-linking"]
external-llvm-linking = []

# disable linking for local installation or packaging
# no-llvm-linking is marker used in the cfg checks
llvm18-1-no-llvm-linking = ["llvm18-1", "no-llvm-linking", "llvm-sys-181/disable-alltargets-init", "llvm-sys-181/no-llvm-linking"]
llvm19-1-no-llvm-linking = ["llvm19-1", "no-llvm-linking", "llvm-sys-191/disable-alltargets-init", "llvm-sys-191/no-llvm-linking"]
llvm20-1-no-llvm-linking = ["llvm20-1", "no-llvm-linking", "llvm-sys-201/disable-alltargets-init", "llvm-sys-201/no-llvm-linking"]

no-llvm-linking = []

# let qirlib do the llvm linking
# qirlib-llvm-linking is marker used in the cfg checks
llvm18-1-qirlib-llvm-linking = ["llvm18-1", "qirlib-llvm-linking", "llvm-sys-181/disable-alltargets-init", "llvm-sys-181/no-llvm-linking"]
llvm19-1-qirlib-llvm-linking = ["llvm19-1", "qirlib-llvm-linking", "llvm-sys-191/disable-alltargets-init", "llvm-sys-191/no-llvm-linking"]
llvm20-1-qirlib-llvm-linking = ["llvm20-1", "qirlib-llvm-linking", "llvm-sys-201/disable-alltargets-init", "llvm-sys-201/no-llvm-linking"]

qirlib-llvm-linking = []

download-llvm = []
build-llvm = []

# Dev use only for packaging LLVM builds
package-llvm = ["build-llvm", "no-llvm-linking"]
